--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "MIT",
   "devDependencies": {
     "videojs-thumbnails": "^1.0.3"
+  },
+  "dependencies": {
+    "videojs-overlay": "^2.0.0"
   }
 }
